# DNS2HostsSyncer

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  README.md  build_windows_installer.ps1  flake.nix  meson.build  vcpkg.json
.github/workflows/: build-debian-deb.yml  build-dns2hosts-syncer-debian.yml  build-ubuntu-deb.yml  cmake-ubuntu.yml
config/: example_d2hs.json
docs/: RecordParser.md
package/: installer.nsi  reshedule_task.ps1
package/debian/: conffiles  postinit  postinst  prerm
package/windows/: installer.nsi  reshedule_task.ps1
src/: converter.cpp  converter.h  diff.hpp  exit_code.hpp  hosts_file.cpp  hosts_file.h  main.cpp  parse_args.cpp  parse_args.h  parse_config.cpp  parse_config.h  protocol.cpp  protocol.h  record.cpp  record.h  restapi.cpp  restapi.h  rrpool_conf.h
src/configs/: parse_args.cpp  parse_args.h  parse_config.cpp  parse_config.h  rrpool_conf.cpp  rrpool_conf.h
src/dns_records/: protocol.cpp  protocol.h  record.cpp  record.h  restapi.h
src/hosts/: README.md  hosts_file.cpp  hosts_file.h  hostsline.cpp  hostsline.h
src/record_parser/: README.md  a_aaaa_record.cpp  a_aaaa_record.h
systemd/: DNS2HostsSyncer.service  DNS2HostsSyncer.timer
